Fix spacing/layout for filter slide-out panel so that labels are not truncated.  Get rid of deprecated class for original variantCard (pre-model rework).

--- a/assets/css/slideout.css
+++ b/assets/css/slideout.css
@@ -6,9 +6,9 @@
   font-size: 11px;
 }
 .panel-body {
-    padding-top: 1px;
+    padding-top: 5px;
     padding-right: 5px;
-    padding-bottom: 0px;
+    padding-bottom: 2px;
     padding-left: 5px;
     font-size:11px;
     text-align: center;
